--- a/utibe.html
+++ b/utibe.html
@@ -75,6 +75,8 @@
             <li>Android Development</li>
             <li>Computer maintenance and Repairs</li>
             <li>Git flow Mentor</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>Android Java and Kotlin Mentor</li>
             <li>A Teacher</li>
             <li>Saxophonist</li>
