--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <ul>
                     <li><a href="utibe.html">Home</a></li>
 
-                    <li><a href="contact.html" class="active">Contact Me</a></li>
+                    <li><a href="index.html" class="active">Contact Me</a></li>
                 
                   </ul>
                 </nav>
