--- a/utibe.html
+++ b/utibe.html
@@ -23,7 +23,7 @@
                 <li><a href="">SKILLS</a></li>|
                 <li><a href="">LANGUAGES</a></li>|
                 <li><a href="">EDUCATION</a></li> |
-                <li><a href="contact.html">CONTACT ME</a></li>
+                <li><a href="index.html" class="active">CONTACT ME</a></li>
             </ul>
         </div>
 
