--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="top">
                 <nav>
                   <ul>
-                    <li><a href="utibe.html">Home</a></li>
+                    <li><a href="utibe.html">About Me</a></li>
 
                     <li><a href="index.html" class="active">Contact Me</a></li>
                 
@@ -32,7 +32,7 @@
                   
                         <div class="u-margin-bottom-medium">
                                 <h2 class="heading-primary">
-                                        Contact Us
+                                        Contact Me
                                 </h2>
                         </div>
                         <div class="form__group">
